configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/source/conf.py.in
    ${CMAKE_CURRENT_SOURCE_DIR}/source/conf.py
    @ONLY
)

find_package(
    trailbook
    0.1.0
    REQUIRED
    PATHS "${CMAKE_SOURCE_DIR}/cmake"
)
find_package(
    trailbook-ext-everest
    0.1.0
    REQUIRED
    PATHS "${CMAKE_SOURCE_DIR}/cmake"
)

set(EVEREST_DOCS_REPO_URL "git@github.com:everest/everest.github.io" CACHE STRING "The git URL of the repository where the deployed docs are stored")
add_trailbook(
    NAME "everest"
    STEM_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/source
    DEPLOYED_DOCS_REPO_URL ${EVEREST_DOCS_REPO_URL}
    DEPLOYED_DOCS_REPO_BRANCH "main"
)

get_target_property(
    TRAILBOOK_INSTANCE_SOURCE_DIRECTORY
    trailbook_everest
    TRAILBOOK_INSTANCE_SOURCE_DIRECTORY
)
get_filename_component(EVEREST_WORKSPACE_DIRECTORY ${CMAKE_SOURCE_DIR} DIRECTORY)
trailbook_ev_create_snapshot(
    EVEREST_WORKSPACE_DIRECTORY "${EVEREST_WORKSPACE_DIRECTORY}"
    TRAILBOOK_NAME "everest"
    OUTPUT_FILE "${TRAILBOOK_INSTANCE_SOURCE_DIRECTORY}/reference/assets/snapshot.yaml"
)
