# Main lib BUILD file that exposes everest libraries

# Alias libraries to provide the expected target names
alias(
    name = "ocpp",
    actual = "@libocpp//:libocpp",
    visibility = ["//visibility:public"],
)

alias(
    name = "ocpp_evse_security",
    actual = "//lib/everest/conversions/ocpp:ocpp_evse_security",
    visibility = ["//visibility:public"],
)

alias(
    name = "ocpp_conversions",
    actual = "//lib/everest/conversions/ocpp:ocpp_conversions",
    visibility = ["//visibility:public"],
)

alias(
    name = "evse_security_conversions",
    actual = "//lib/everest/conversions/evse_security:evse_security_conversions",
    visibility = ["//visibility:public"],
)

alias(
    name = "run_application",
    actual = "//lib/everest/run_application:run_application",
    visibility = ["//visibility:public"],
)

alias(
    name = "external_energy_limits",
    actual = "//lib/everest/external_energy_limits:external_energy_limits",
    visibility = ["//visibility:public"],
)
alias(
    name = "util",
    actual = "//lib/everest/util:util",
    visibility = ["//visibility:public"],
)
