[workspace]
resolver = "2"
members = [
   "HardwareDrivers/PowerMeters/RsIskraMeter",
   "HardwareDrivers/PowerMeters/RsModDefMeter",
   "HardwareDrivers/Payment/RsPaymentTerminal",
   "Examples/RustExamples/RsExample",
   "Examples/RustExamples/RsExampleUser",
]

[workspace.dependencies]
everestrs = { path = "framework/everestrs/everestrs" }
everestrs-build = { path = "framework/everestrs/everestrs-build" }
everestrs-derive = { path = "framework/everestrs/everestrs-derive" }
